# sport_analytics

./: hello.py  init_db.py  pyproject.toml  run.py
app/: __init__.py  admin_dashboard.html
app/models/: evaluation.py  training.py  user.py
app/routes/: auth.py  coach.py  evaluation.py  main.py  training.py
app/templates/: admin_dashboard.html  all_records.html  announcement.html  announcements.html  athlete_dashboard.html  base.html  cdashboard.html  create_announcement.html  create_athlete.html  create_coach.html  dashboard.html  edit_announcement.html  edit_evaluation.html  edit_record.html  edit_user.html  evaluation_form.html  index.html  list.html  login.html  register.html  upload.html  user_management.html
migrations/versions/: 9d3bc00941b1_init.py
